Web Inspector: Select elements in DOM hierarchy are misaligned https://bugs.webkit.org/show_bug.cgi?id=160885
Patch by Devin Rousso <dcrousso+webkit@gmail.com> on 2016-08-17
Reviewed by Timothy Hatcher.

* UserInterface/Views/HierarchicalPathComponent.css:
(.hierarchical-path-component > select):

Canonical link: https://commits.webkit.org/179065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204571 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/HierarchicalPathComponent.css
+++ b/Source/WebInspectorUI/UserInterface/Views/HierarchicalPathComponent.css
@@ -97,7 +97,7 @@
  /* Positioned so the text in the menu aligns with the text in .title. */
     position: absolute;
     top: -1px;
-    left: 10px;
+    left: 13px;
     right: 0;
     bottom: 0;
 }
